# helloRtp

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  doc.md
cmake/: checkBuildType.cmake  config.h.in  utils.cmake
doc/: TODOs.md  audio_notes.md  reference.md
include/: H264Decoder.h  dao.h  httpUtils.h  littleGift.h  pch.h
include/seeker/: common.h  database.h  logger.h  loggerApi.h  media.h  secure.h  socketUtil.h
lib/: sqlite3.lib  zlibwapi.lib
resources/: ca-bundle.crt  ffmpeg_cmd.txt  tables.sql
resources/htmlTemplate/: base.html  codeChecker.html  editorPage.html  gift.html  hello.html  preview.html  result.html  test1.html  test2.html
resources/static/css/: base.css
resources/static/reveal/: example.md  index.html
src/: main.cpp  udpClient.cpp  udpServer.cpp
src/baseUdp/: udpClient.cpp  udpServer.cpp
src/ffmpeg/: ffmpegPlayer.cpp  rtpdec_h264.c
src/jrtplibTest/: H264Decoder.cpp  HelloJrtplib.cpp  receiveAndPlay.cpp  receiveAndSave.cpp
